adjusting the application.properties

--- a/multitenancy-jpa/src/main/resources/application.properties
+++ b/multitenancy-jpa/src/main/resources/application.properties
@@ -1,6 +1,2 @@
-spring.application.name=spring-multitenant-jpa
-server.port=8082
-#spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
-spring.profiles.active=mysql
+spring.application.name=multitenancy-jpa
 
