--- a/multitenancy-jpa-sample/pom.xml
+++ b/multitenancy-jpa-sample/pom.xml
@@ -67,6 +67,14 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.7.0</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.barath.multitenancy</groupId>
+			<artifactId>multitenancy-jpa</artifactId>
+			<version>1.0.0.RELEASE</version>
+		</dependency>
+		
+		
 	</dependencies>
 
 	<build>
