user controller changes

--- a/multitenancy-jpa-sample/src/main/resources/application.properties
+++ b/multitenancy-jpa-sample/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
 spring.profiles.active=mysql
-multitenancy.default-tenant=tenant_a
+multitenancy.default-tenant=tenanta
 
