--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,53 +1,24 @@
 version: '3'
 services:
-  eureka-server:
-    build: ./eureka-server
-    ports:
-      - "9000:9000"
-  msstore-microservice:
-    build: ./msstore-microservice
-    ports:
-      - "9002:9002"
-    links: 
-      - eureka-server
-    environment:
-      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-server:9000/eureka
-  csstore-microservice:
-    build: ./csstore-microservice
-    ports:
-      - "9001:9001"
-    links: 
-      - eureka-server
-    environment:
-      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-server:9000/eureka
-  wsstore-node:
-    build: ./wstore-node-express
-    ports:
-      - "3000:3000"
-    links: 
-      - sidecar
-  zuul-proxy:
-    build: ./zuul-proxy
-    ports:
-      - "9005:9005"
-    depends_on: 
-      - msstore-microservice
-      - csstore-microservice
-    environment:
-      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-server:9000/eureka
-      ZUUL_ROUTES_MSSTORE_URL: http://msstore-microservice:9002
-      ZUUL_ROUTES_CSSTORE_URL: http://csstore-microservice:9001
-      ZUUL_ROUTES_WSTORE_URL:  http://wsstore-node:3000
-  sidecar:
-   build: ./sidecar
+  mysql:
+   image: mysql-healthcheck
    ports:
-      - "9004:9004"
-   links: 
-      - eureka-server  
+      - "3307:3306"
    environment:
-      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-server:9000/eureka
-      SIDECAR_HEALTH-URI: http://wsstore-node:3000/health
-      ZUUL_ROUTES_WSTORE_URL: http://wsstore-node:3000
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: jpadb
 
+  multitenancy-app:
+    build: ./multitenancy-jpa-sample
+    ports:
+      - "8082:8082" 
+    depends_on:
+      - mysql       
+    environment: 
+      SPRING_PROFILES_ACTIVE: docker
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3307/jpadb
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: root
+ 
 
 
