--- a/multitenancy-jpa-sample/src/main/resources/application.properties
+++ b/multitenancy-jpa-sample/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=spring-multitenant-jpa
 server.port=8082
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
-spring.profiles.active=mysql
+spring.profiles.active=docker
 multitenancy.default-tenant=tenanta
 
