--- a/multitenancy-jpa/pom.xml
+++ b/multitenancy-jpa/pom.xml
@@ -53,6 +53,14 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.hsqldb</groupId>
+		    <artifactId>hsqldb</artifactId>
+		    <version>2.4.0</version>
+		    <scope>test</scope>
+		</dependency>
+				
 	</dependencies>
 
 	<build>
